# katzen

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Gctx.cpp  Gctx.hpp  LICENSE  flake.nix  katzen.hpp  meson.build  meson_options.txt  widgets.hpp
cmake/: katzenConfig.cmake
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  demo.cpp  meson.build  widgetFactory.cpp
examples/tamzen/: tamzen.cpp  tamzen.hpp
examples/tiny/: tiny.cpp  tiny.hpp
icons/: katz_fill.h  katz_fill.rgi  katz_icons.hpp  katz_line.h  katz_line.rgi
include/: CMakeLists.txt  Font.hpp  Reactive.hpp  Renderer.hpp  Root.hpp  Theme.hpp  Window.hpp  app.hpp  bins.hpp  core.hpp  icons.hpp  katzen.hpp  meson.build  theme.hpp  widgets.hpp
include/bins/: Bin.hpp  Box.hpp  Button.hpp  Capsule.hpp  IconLabel.hpp  Padding.hpp
include/core/: Align.hpp  Axis.hpp  BVec2.hpp  Dctx.hpp  DynamicCastPtr.hpp  Edges.hpp  Gctx.hpp  Rect.hpp  Rgba.hpp  State.hpp  Vec2.hpp  vectors.hpp
include/ctx/: Dctx.hpp  Gctx.hpp
include/icons/: KatzIcon.hpp  katz.hpp  katz_fill.h  katz_icons.hpp  katz_line.h
include/input/: Cursor.hpp  mouse.hpp
include/parts/: Bin.hpp  Container.hpp  Reactive.hpp  Text.hpp  icons.hpp  textHelpers.hpp  types.hpp
include/root/: Dctx.hpp  Gctx.hpp  Root.hpp
include/text/: Font.hpp  tiny.hpp
include/theme/: FontStyle.hpp  Theme.hpp  fonts.hpp
include/widgets/: Box.hpp  Button.hpp  Checkbox.hpp  Icon.hpp  IconLabel.hpp  Label.hpp  LabelEx.hpp  Rectangle.hpp  Slider.hpp  Spacer.hpp  Widget.hpp  WidgetBuilder.hpp
src/: CMakeLists.txt  Font.cpp  Reactive.cpp  Renderer.cpp  Root.cpp  Root.hpp  Window.cpp  app.cpp  core.hpp  icons.cpp  meson.build  theme.hpp  widgets.hpp
src/bins/: Bin.cpp  Box.cpp  Button.cpp  Capsule.cpp  IconLabel.cpp  Padding.cpp
src/components/: Container.hpp  Reactive.hpp  Text.cpp  Text.hpp  icons.cpp  icons.hpp  scales.hpp  textHelpers.cpp  textHelpers.hpp
src/core/: Align.hpp  Axis.hpp  Bounds.hpp  Dctx.hpp  Edges.hpp  Gctx.hpp  Rect.hpp  State.hpp  vec.hpp  vectors.hpp
src/input/: Cursor.cpp  mouse.cpp
src/parts/: Reactive.cpp  Text.cpp  icons.cpp  textHelpers.cpp
src/text/: Font.cpp  tiny.cpp
src/theme/: FontStyle.hpp  ThemeFont.hpp  fonts.cpp  fonts.hpp  themer.cpp  themer.hpp
src/theming/: Theme.hpp  ThemeFont.hpp  fonts.cpp  fonts.hpp  themer.cpp  themer.hpp
src/widgets/: Box.cpp  Box.hpp  Button.cpp  Button.hpp  Checkbox.cpp  Checkbox.hpp  Icon.cpp  Icon.hpp  IconLabel.cpp  IconLabel.hpp  Label.cpp  Label.hpp  LabelEx.cpp  Rectangle.cpp  Root.cpp  Root.hpp  Slider.cpp  Slider.hpp  Spacer.cpp  Spacer.hpp  Widget.cpp  Widget.hpp  helpers.cpp  helpers.hpp
tests/: CMakeLists.txt  doctest.cpp
tests/core/: test_align.cpp  test_bounds.cpp  test_edges.cpp  test_rect.cpp  test_vec.cpp  test_vectors.cpp
tests/widgets/: testIcon.cpp  testWidget.cpp  test_icon.cpp  test_label.cpp  test_widget.cpp
widgets/: Box.cpp  Button.cpp  Icon.cpp  IconLabel.cpp  Label.cpp  Widget.cpp  helpers.cpp  helpers.hpp
