install_headers(
  'app.hpp',
  'icons.hpp',
  'Renderer.hpp',
  'Root.hpp',
  'Window.hpp',
  'bins/Bin.hpp',
  'bins/Capsule.hpp',
  'bins/Padding.hpp',
  'core/Align.hpp',
  'core/Axis.hpp',
  'core/BVec2.hpp',
  'core/Edges.hpp',
  'core/Rect.hpp',
  'core/Rgba.hpp',
  'core/State.hpp',
  'core/Vec2.hpp',
  'ctx/Gctx.hpp',
  'ctx/Dctx.hpp',
  'icons/katz.hpp',
  'theme/Theme.hpp',
  'widgets/Icon.hpp',
  'widgets/Rectangle.hpp',
  'widgets/Spacer.hpp',
  'widgets/Widget.hpp',
  subdir: meson.project_name(),
)
