katze_sources = files(
  'app.cpp',
  'Font.cpp',
  'icons.cpp',
  'Renderer.cpp',
  'Root.cpp',
  'Window.cpp',
  'bins/Bin.cpp',
  'bins/Box.cpp',
  'bins/Capsule.cpp',
  'bins/Padding.cpp',
  'widgets/Icon.cpp',
  'widgets/Label.cpp',
  'widgets/Rectangle.cpp',
  'widgets/Spacer.cpp',
  'widgets/Widget.cpp',
)
