katze_sources = files(
  'app.cpp',
  'Font.cpp',
  'icons.cpp',
  'Reactive.cpp',
  'Renderer.cpp',
  'Root.cpp',
  'Window.cpp',
  'bins/Bin.cpp',
  'bins/Box.cpp',
  'bins/Button.cpp',
  'bins/Capsule.cpp',
  'bins/IconLabel.cpp',
  'bins/Padding.cpp',
  'input/Cursor.cpp',
  'input/mouse.cpp',
  'widgets/Checkbox.cpp',
  'widgets/Icon.cpp',
  'widgets/Label.cpp',
  'widgets/Rectangle.cpp',
  'widgets/Slider.cpp',
  'widgets/Spacer.cpp',
  'widgets/Widget.cpp',
)
